--- a/Introductory Functional Analysis and Applications/preamble.tex
+++ b/Introductory Functional Analysis and Applications/preamble.tex
@@ -16,6 +16,7 @@
 % new commands
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
+\newcommand{\C}{\mathbb{C}}
 \newcommand{\norm}[2]{\left\lVert #1 \right\rVert_{#2}}
 \newcommand{\abs}[1]{\left\lvert #1 \right\rvert}
 \renewcommand{\P}{\mathbb{P}}
