--- a/Introductory Functional Analysis and Applications/main.tex
+++ b/Introductory Functional Analysis and Applications/main.tex
@@ -13,5 +13,7 @@
 
 \input{Introductory Functional Analysis and Applications/Chapter 1/Chapter 1}
 
+\include{Introductory Functional Analysis and Applications/Chapter 2/Chapter 2}
+
 
 \end{document}
