--- a/Introductory Functional Analysis and Applications/preamble.tex
+++ b/Introductory Functional Analysis and Applications/preamble.tex
@@ -17,7 +17,7 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\C}{\mathbb{C}}
-\newcommand{\norm}[2]{\left\lVert #1 \right\rVert_{#2}}
+\newcommand{\norm}[1]{\left\lVert #1 \right\rVert}
 \newcommand{\abs}[1]{\left\lvert #1 \right\rvert}
 \renewcommand{\P}{\mathbb{P}}
 \newcommand{\g}{>}
