--- a/Introductory Functional Analysis and Applications/preamble.tex
+++ b/Introductory Functional Analysis and Applications/preamble.tex
@@ -22,6 +22,9 @@
 \renewcommand{\P}{\mathbb{P}}
 \newcommand{\g}{>}
 \renewcommand{\l}{<}
+\newcommand{\dom}[1]{\mathcal{D}(#1)}
+\newcommand{\range}[1]{\mathcal{R}(#1)}
+\newcommand{\nul}[1]{\mathcal{N}(#1)}
 
 \renewcommand{\qedsymbol}{$\blacksquare$}
 
