--- a/Introductory Functional Analysis with Applications- Kreyszig/preamble.tex
+++ b/Introductory Functional Analysis with Applications- Kreyszig/preamble.tex
@@ -25,6 +25,7 @@
 \newcommand{\dom}[1]{\mathcal{D}(#1)}
 \newcommand{\range}[1]{\mathcal{R}(#1)}
 \newcommand{\nul}[1]{\mathcal{N}(#1)}
+\newcommand{\inner}[2]{\left\langle #1 , #2 \right\rangle}
 
 \renewcommand{\qedsymbol}{$\blacksquare$}
 
