--- a/Introductory Functional Analysis with Applications- Kreyszig/main.tex
+++ b/Introductory Functional Analysis with Applications- Kreyszig/main.tex
@@ -15,5 +15,8 @@
 
 \include{Introductory Functional Analysis with Applications- Kreyszig/Chapter 2/Chapter 2}
 
+\include{Introductory Functional Analysis with Applications- Kreyszig/Chapter 3/Chapter 3}
+
+
 
 \end{document}
